# palindrome

./: README.md  pyproject.toml
palindrome/: numbers.py  palindrome_problem.py
src/palindrome/: __init__.py  doubling_problem.py  palindrome_problem.py
