[tool.poetry]
name = "palindrome"
version = "0.1.0"
description = ""
authors = ["Victor S. Miller <victorsmiller@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-sat = "^0.1.8.dev10"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
