[project]
name = "palindrome"
version = "1.0.0"
description = "Solve the problem a + b = c, where a||b||c is a palindrome."
authors = [{ name = "Victor S. Miller", email = "victorsmiller@gmail.com" }]
requires-python = ">=3.11, <4.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "python-sat>=0.1.8.dev10",
    "numpy>=1.26.2",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
